Extract an interface and the first solver implementation